<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="20sp"
    tools:context=".AmountFragment">


    <TextView
        android:id="@+id/recipientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountIcon"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/amount_send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/amount_cancel_btn"
        app:layout_constraintTop_toBottomOf="@+id/amountMoney"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/amount_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/amount_send_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountMoney"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/amountMoney"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:autofillHints=""
        android:background="@android:drawable/dark_header"
        android:ems="5"
        android:hint="@string/amount"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientName"
        app:layout_constraintVertical_bias="0.095" />

    <ImageView
        android:id="@+id/amountIcon"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/amounticon"
        android:src="@drawable/amounticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>